# payment_processing_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: config.py  main.py
app/application/: dtos.py
app/application/ports/: repositories.py  unit_of_work.py
app/application/services/: payment_processor.py  payment_service.py
app/domain/: events.py  payment.py
app/infrastructure/db/: models.py  repositories.py  session.py  unit_of_work.py
app/infrastructure/mq/: faststream.py
app/infrastructure/webhooks/: client.py
app/presentation/api/: deps.py
app/presentation/api/v1/: payments.py
app/presentation/middleware/: correlation_id.py  logging.py
consumer/: main.py
migrations/: env.py
migrations/versions/: 5b2c82d1c1ac_initial_payments_and_outbox_tables.py
outbox_worker/: worker.py
tests/: conftest.py
tests/integration/: test_payments_api.py
tests/unit/: test_domain.py
