[project]
name = "payment-service"
version = "0.1.0"
description = "Async payment processing microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "faststream[rabbit]>=0.5.33",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,rabbitmq]>=4.8.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]